# dbxredact

./: .gitignore  .pre-commit-config.yaml  README.md  databricks.yml.template  deploy.sh  example.env  load_benchmark.sh  pyproject.toml  requirements.txt  variables.yml
.github/workflows/: ci.yml  databricks-ci.yml  tests.yml
apps/dbxredact-app/: app.py  app.yaml  index.html  package.json  requirements.txt  vite.config.ts
data/: synthetic_benchmark.csv  synthetic_benchmark_finance.csv  synthetic_benchmark_medical.csv
notebooks/: 0_load_benchmark_data.py  10_setup_app_tables.py  1_benchmarking_detection.py  2_benchmarking_evaluation.py  3_benchmarking_redaction.py  4_redaction_pipeline.py  5_benchmarking_judge.py  6_benchmarking_audit.py  7_benchmarking_next_actions.py  9_gliner_fine_tuning.py  grant_app_permissions.py
resources/: app.yml  jobs.yml
scripts/: generate_synthetic_benchmark.py  run_benchmark.sh
src/dbxredact/: __init__.py  active_learning.py  ai_detector.py  alignment.py  analyzer.py  calibration.py  config.py  cost.py  detection.py  entity_filter.py  evaluation.py  gliner_detector.py  judge.py  masking.py  metadata.py  (+4 more)
tests/: __init__.py  conftest.py  test_active_learning.py  test_ai_detector.py  test_alignment.py  test_calibration.py  test_config.py  test_cost.py  test_detection.py  test_entity_filter.py  test_evaluation.py  test_gliner_detector.py  test_judge.py  test_masking.py  test_metadata.py  test_pipeline_combinations.py  test_pipeline_governance.py  test_pipeline_output_mode.py  test_presidio.py  test_redaction.py  test_utils.py
(+50 files in other folders)
